--- a/classicoFrontend/src/index.css
+++ b/classicoFrontend/src/index.css
@@ -3,3 +3,14 @@
 body {
   font-family: 'Manrope', sans-serif;
 }
+
+.pacifico-regular {
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+.lobster-regular {
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
